src/objects/Weekly_Report_Item__c.object
<CustomObject>
    <description>This will be used to store weekly items entered for various sources e.g. Meeting , Task,  Account  etc.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Weekly Report Items</relationshipLabel>
        <relationshipName>Weekly_Report_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>Handset</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Companion Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combination</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Function__c</controllingField>
            <picklistValues>
                <fullName>Highlights</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Market Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Week&apos;s Priorities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Highlights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upcoming Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Landscape__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitive Landscape</label>
        <referenceTo>Competitive_Landscape__c</referenceTo>
        <relationshipLabel>Weekly Report Items</relationshipLabel>
        <relationshipName>Weekly_Report_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitive_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitive Product</label>
        <referenceTo>Competitive_Product__c</referenceTo>
        <relationshipLabel>Weekly Report Items</relationshipLabel>
        <relationshipName>Weekly_Report_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>CASE(TEXT( Account__r.Country__c), &quot;United States&quot;, &quot;US&quot;, TEXT( Account__r.Country__c))</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Week__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Current Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friendly_Account_Name__c</fullName>
        <formula>Account__r.Friendly_Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Friendly Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>GTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biz Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Include_in_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer_Meeting__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Meeting__c</referenceTo>
        <relationshipLabel>Weekly Report Items</relationshipLabel>
        <relationshipName>Weekly_Report_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Playbook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Playbook</label>
        <referenceTo>Retail_Playbook__c</referenceTo>
        <relationshipLabel>Weekly Report Items</relationshipLabel>
        <relationshipName>Weekly_Report_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Week__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program (PMD)</label>
        <referenceTo>PMD_Program__c</referenceTo>
        <relationshipLabel>Weekly Report Items</relationshipLabel>
        <relationshipName>Weekly_Report_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Sort_Order__c</fullName>
        <formula>CASE(TEXT(Account__r.Region__c), 
&apos;North America&apos;, 
IF(OR(ISPICKVAL(Account__r.PublicCalendar__c, &apos;Retail Sales (NA)&apos;),
      ISPICKVAL(Account__r.PublicCalendar__c, &apos;Retail Sales (Non NA)&apos;)), 4, 1), 
&apos;Latin America&apos;, 2, 
&apos;Europe Middle East &amp; Africa&apos;, 3, 
&apos;APAC&apos;, 5, 
&apos;Global&apos;, 6, 99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>CASE(TEXT(Account__r.Region__c), &apos;North America&apos;, IF(OR(ISPICKVAL(Account__r.PublicCalendar__c, &apos;Retail Sales (NA)&apos;), ISPICKVAL(Account__r.PublicCalendar__c, &apos;Retail Sales (Non NA)&apos;)) , &apos;Retail &amp; Distribution&apos;, &apos;NA&apos;), &apos;Latin America&apos;, &apos;LA&apos;, &apos;Europe Middle East &amp; Africa&apos;, &apos;EMEA&apos;, &apos;APAC&apos;, &apos;APAC&apos;, &apos;Global&apos;, &apos;Global&apos;, &apos;&apos;)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_ID__c</fullName>
        <label>Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Link__c</fullName>
        <label>Source Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Landscape</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Pricing info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New product Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising &amp; Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <description>This should display Weekly as the default option and next 3 to 6 quarters based on requirement. As of 08/22/2014, this has the values of Weekly, 2014 Q3, 2014 Q4, 2015 Q1</description>
        <label>Time Period</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2014 Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 FY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Week_Ending__c</fullName>
        <formula>Weekly_Report__r.Week_Ending__c</formula>
        <label>Week Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weekly_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Weekly Report</label>
        <referenceTo>Weekly_Report__c</referenceTo>
        <relationshipLabel>Weekly Report Items</relationshipLabel>
        <relationshipName>Weekly_Report_Items_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Weekly Report Item</label>
    <nameField>
        <displayFormat>WRI-{000000}</displayFormat>
        <label>Weekly Report Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Report Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Sub_Category_For_Market_Intelligence</fullName>
        <active>true</active>
        <description>Sub Category mandatory for Market Intelligence</description>
        <errorConditionFormula>ISPICKVAL(Function__c, &apos;GTM&apos;) &amp;&amp; ISPICKVAL(Category__c, &apos;Market Intelligence&apos;) &amp;&amp; ISPICKVAL(Sub_Category__c, &apos;&apos;)</errorConditionFormula>
        <errorMessage>Sub Category cannot be blank when category selected is Market Intelligence.</errorMessage>
    </validationRules>
</CustomObject>